--- a/PW-3_TV-13_NowotkaViktoriia/app/src/main/res/values/strings.xml
+++ b/PW-3_TV-13_NowotkaViktoriia/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">PW-3_TV-13_NowotkaViktoriia</string>
+    <string name="app_name">PW_3</string>
 </resources>
